edits from Sabin

--- a/Reportanswer-CKM.tex
+++ b/Reportanswer-CKM.tex
@@ -112,7 +112,7 @@ Here are the responses to the remarks in the referee report.
 
 \item Fixed typo.
 
-\item NEED. (I added a missing $x_S$ on the last displayed line.)
+\item There was a problem with the whole calculation which is now fixed. The problem is that we didn't use the right map for the cup. 
 
 \item Fixed typo.
 
