--- a/Reportanswer-CKM.tex
+++ b/Reportanswer-CKM.tex
@@ -141,13 +141,13 @@ Here are the responses to the remarks in the referee report.
 
 \item Erased ``that''.
 
-\item Fixed: ``thus be the hexagon equation\emph{s}''
+\item Fixed: ``thus by the hexagon equation\emph{s}''
 
-\item NEED
+\item Added a reference.
 
 \item Fixed.
 
-\item NEED
+\item References to preprints updated.
 
 \end{enumerate}
 
