--- a/webs.tex
+++ b/webs.tex
@@ -1764,7 +1764,7 @@ $$ \Hom((k_1, \dots, k_m), (l_1, \dots, l_p)) = \begin{cases} \one_{(l_1, \dots,
 $$
 The functors $ \Phi^n_m $ combine together to a functor $ \Phi^n : \dU^n(\gl_\bullet) \rightarrow \Rep(\SL_n) $ which factors through $ \Sp(\SL_n)$. Our goal in this section is to define a braided monoidal category structure on $ \dU^n(\gl_\bullet) $ and to show that $\Phi^n $ preserves the braiding.
 
-\subsection{Braided monoidal category structure on $\dU^n(\gl_\bullet)$} \label{se:braiding}
+\subsection{Braided monoidal category structure on \texorpdfstring{$\dU^n(\gl_\bullet)$}{Un(gl.)}} \label{se:braiding}
 First, we define a monoidal category structure on $\dU^n(\gl_\bullet)$.  The tensor product of objects is given by concatenation $(k_1, \dots, k_m) \otimes (l_1, \dots, l_p) = (k_1, \dots, k_m, l_1, \dots, l_p) $.  The tensor product of morphisms comes from the obvious embedding $ U_q(\gl_{m}) \otimes U_q(\gl_{p}) \rightarrow U_q(\gl_{m+p})$.  From the perspective of ladders, the tensor product is given by horizontal juxtaposition.  This monoidal structure is associative with trivial associator.
 
 Recall that a braiding $\beta$ on a monoidal category $ \mathcal C$ is system of natural isomorphisms $\beta_{V, W} : V \otimes W \rightarrow W \otimes V $ satisfying the ``hexagon equations''
